Add some service

--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>com.example</groupId>
 	<artifactId>HlebnayaLavka</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>HlebnayaLavka</name>
-	<description>HlebnayaLavka</description>
 
 	<dependencyManagement>
 		<dependencies>
@@ -62,6 +62,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<version>42.4.3</version>
 		</dependency>
 
 		<dependency>
@@ -139,7 +140,7 @@
 
 					<compilerArgs>
 						<compilerAgr>
-							-Amapstruct.defaultComponentModel=spring
+							-AmapStruct.defaultComponentModel=spring
 						</compilerAgr>
 					</compilerArgs>
 				</configuration>
@@ -167,8 +168,8 @@
 							<configOptions>
 								<delegatePatern>true</delegatePatern>
 								<additionalModelTypeAnnotation>
-									@lombok.NoAgrsConstructor
-									@lombok.AllAgrsConstructor
+									@lombok.NoArgsConstructor
+									@lombok.AllArgsConstructor
 								</additionalModelTypeAnnotation>
 							</configOptions>
 						</configuration>
