--- a/src/main/resources/api.yml
+++ b/src/main/resources/api.yml
@@ -4,7 +4,7 @@ info:
   description: Магазин хлебобулочных изделий
   version: 0.0.1
 servers:
-  - url: http://localhost:8081
+  - url: http://localhost:8080/lavka
 tags:
   - name: menu
     description: методы для работы с меню
