--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=8081
-server.servlet.context-path=/lavka
+server.port=8080
+server.servlet.context-path=/lavka/
 
 spring.application.name=HlebnayaLavka
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=hlebnaya_lavka
+spring.datasource.password=hlebushek
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
